force-app/main/default/objects/Custom_Case__c/Custom_Case__c.object-meta.xml
<CustomObject>
    <label>Custom_Case</label>
    <nameField>
        <displayFormat>C-{0}</displayFormat>
        <label>Custom_Case  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom_Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>