force-app/main/default/objects/Custom_Case__c/fields/Check_box_3__c.field-meta.xml
<CustomField>
    <fullName>Check_box_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created in Custom_case object for task given in 10-12-2020</description>
    <label>Check box 3</label>
    <type>Checkbox</type>
</CustomField>