force-app/main/default/objects/Custom_Case__c/fields/Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Contact_email__c</fullName>
    <description>Formula field on case object to contact email.
This field is created as per task given on 10-12-2020</description>
    <formula>Contact__r.Email</formula>
    <label>Contact email</label>
    <type>Text</type>
</CustomField>