force-app/main/default/objects/Custom_Case__c/fields/contact_phone__c.field-meta.xml
<CustomField>
    <fullName>contact_phone__c</fullName>
    <description>Formula field on case to contact mobile phone as per task given on 10-12-2020</description>
    <formula>Contact__r.MobilePhone</formula>
    <label>contact phone</label>
    <type>Text</type>
</CustomField>