force-app/main/default/objects/Custom_Case__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created in Custom_case object for task given in 10-12-2020</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Custom_Cases</relationshipLabel>
    <relationshipName>Custom_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>