force-app/main/default/objects/Custom_Case__c/fields/Opportunity_lookup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity lookup</label>
    <referenceTo>Custom_Opportunity__c</referenceTo>
    <relationshipLabel>Custom_Cases</relationshipLabel>
    <relationshipName>Custom_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>