force-app/main/default/objects/Custom_Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This field is created in Custom_case object for task given in 10-12-2020</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>working</fullName>
            </value>
            <value>
                <fullName>escalated</fullName>
            </value>
            <value>
                <fullName>closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>