force-app/main/default/objects/Custom_Case__c/fields/Text_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Text_Field_1__c</fullName>
    <description>This field is created for Custom_Case object for task given on 10-12-2020</description>
    <label>Text Field 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>