force-app/main/default/objects/Custom_Case__c/fields/Text_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Text_Field_3__c</fullName>
    <description>This field is created in Custom_case object for task given in 10-12-2020</description>
    <label>Text Field 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>