force-app/main/default/objects/Custom_Case__c/fields/Traning__c.field-meta.xml
<CustomField>
    <fullName>Traning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Traning</label>
    <referenceTo>Traning__c</referenceTo>
    <relationshipLabel>Custom_Cases</relationshipLabel>
    <relationshipName>Custom_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>