force-app/main/default/objects/Custom_Case__c/recordTypes/Record_Type_1.recordType-meta.xml
<RecordType>
    <fullName>Record_Type_1</fullName>
    <active>true</active>
    <description>This Record Type is created in Custom_case object for task given in 10-12-2020</description>
    <label>Record Type 1</label>
</RecordType>