force-app/main/default/objects/Custom_Case__c/validationRules/case_3.validationRule-meta.xml
<ValidationRule>
    <fullName>case_3</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  ISPICKVAL( Status__c , &quot;closed&quot;) ,
OR(
 Check_box_3__c = FALSE,
 ISBLANK(Text_Field_3__c)))</errorConditionFormula>
    <errorMessage>ENTER CHECK BOX 3 AND TEX FIELD 3</errorMessage>
</ValidationRule>