force-app/main/default/objects/Custom_Case__c/validationRules/check_for_case_1.validationRule-meta.xml
<ValidationRule>
    <fullName>check_for_case_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 ISPICKVAL(Status__c  , &quot;Working&quot;),
OR(
 Check_box_1__c = FALSE ,
 ISBLANK( Text_Field_1__c ) )
)</errorConditionFormula>
    <errorMessage>check box 1 &amp; Textbox 1 are required</errorMessage>
</ValidationRule>