force-app/main/default/objects/Custom_Case__c/validationRules/Check_for_case_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_case_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 ISPICKVAL( Status__c , &quot;Escalated&quot;) ,
OR(
  Check_box_2__c = False ,
  ISBLANK( Text_Field_2__c ))
)</errorConditionFormula>
    <errorMessage>chek box 2 and text field 2 are required</errorMessage>
</ValidationRule>