force-app/main/default/objects/Custom_Case__c/validationRules/Status_to_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_to_Closed</fullName>
    <active>false</active>
    <description>This validation rule will fire when status picklist is in &quot;Closed&quot;.
This is created in custom_case object for Task dated on 10-12-2020</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&quot;Closed&quot;),
OR
( LEN( Text_Field_1__c )=0,
  LEN( Text_Field_2__c )=0,
  LEN( Text_Field_3__c )=0,
    Check_box_1__c = FALSE,
    Check_box_2__c = FALSE,
    Check_box_3__c = FALSE) 
)</errorConditionFormula>
    <errorMessage>Please enter values for Text field 1;Text field 2 ;Text field 3 ;check box 1;check box 2 and check box 3</errorMessage>
</ValidationRule>