force-app/main/default/objects/Custom_Case__c/validationRules/test_for_profile.validationRule-meta.xml
<ValidationRule>
    <fullName>test_for_profile</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $Profile.Name =&quot;Platform user clone&quot;,   
    And(
       LEN(   Opportunity_lookup__c ) =0) ,
       false)</errorConditionFormula>
    <errorMessage>Opportunity is required</errorMessage>
</ValidationRule>